--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "repository": "amimaro/txt-template",
   "keywords": [],
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "ejs": "^2.5.9"
+  },
   "devDependencies": {
     "ava": "*"
   }
